--- a/pages/sv/sv1.html
+++ b/pages/sv/sv1.html
@@ -9,13 +9,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/e56c958c32.js" crossorigin="anonymous"></script>
-        <link href="/lib/css/global.css" rel="stylesheet">
+        <link href="../../lib/css/global.css" rel="stylesheet">
     </head>
     <body>
         <header class="header">
             <div class="container">
-                <a href="/">
-                    <img src="/lib/imgs/c1-pokeball-logo.svg" alt="C1 Logo">
+                <a href="../../index.html">
+                    <img src="../../lib/imgs/c1-pokeball-logo.svg" alt="C1 Logo">
                 </a>
             </div>
         </header>
@@ -25,7 +25,7 @@
                     <div class="container gx-1">
                         <div class="row g-4 mb-4"> 
                             <div class="col-7">
-                                <img class="img-fluid" src="/lib/imgs/set-logos/SV.png">
+                                <img class="img-fluid" src="../../lib/imgs/set-logos/SV.png">
                             </div>
                             <div class="col-5 align-self-center">
                                 <div id="setInfo"></div>
