--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header class="header">
             <div class="container">
                 <a href="index.html">
-                    <img src="../../lib/imgs/c1-pokeball-logo.svg" alt="C1 Logo">
+                    <img src="lib/imgs/c1-pokeball-logo.svg" alt="C1 Logo">
                 </a>
             </div>
         </header>
