--- a/index.html
+++ b/index.html
@@ -19,46 +19,46 @@
                 </a>
             </div>
         </header>
-        <main class="container mt-4">
-            <div class="row mb-3">
+        <main class="container mt-2">
+            <div class="row mb-3 p-3">
                 <h1 class="set-title">Scarlet & Violet Sets</h1>
             </div>
             <div class="container gx-1">
                 <div class="row g-4">
-                    <div class="col-4">
+                    <div class="col-6 col-lg-4">
                         <div class="card set-card">
                             <img src="lib/imgs/set-logos/PAF.png"> 
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-6 col-lg-4">
                         <a href="pages/sv/sv4.html" class="no-decoration">
                             <div class="card set-card">
                                 <img src="lib/imgs/set-logos/PAR.png">
                             </div>
                         </a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-6 col-lg-4">
                         <a href="pages/sv/sv3pt5.html" class="no-decoration">
                             <div class="card set-card">
                                 <img src="lib/imgs/set-logos/151.png">  
                             </div>
                         </a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-6 col-lg-4">
                         <a href="pages/sv/sv3.html" class="no-decoration">
                             <div class="card set-card">
                                 <img src="lib/imgs/set-logos/OBF.png">  
                             </div>
                         </a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-6 col-lg-4">
                         <a href="pages/sv/sv2.html" class="no-decoration">
                             <div class="card set-card">
                                 <img src="lib/imgs/set-logos/PE.png"> 
                             </div>
                         </a>
                     </div>
-                    <div class="col-4">
+                    <div class="col-6 col-lg-4">
                         <a href="pages/sv/sv1.html" class="no-decoration">
                             <div class="card set-card">
                                 <img src="lib/imgs/set-logos/SV.png">
