--- a/pages/sv/sv1.html
+++ b/pages/sv/sv1.html
@@ -222,12 +222,15 @@
                         const originalNumber = card.number;
                         const formattedNumber = originalNumber.toString().padStart(3, '0');
 
+                        const cardName = card.name;
+                        const formatedCardName = cardName.replace(/ /g, '_').replace(/[()]/g, '').replace(/'/g, '').replace(/\./g, '');
+
                         const cardElement = document.createElement('div');
                         cardElement.setAttribute('class', `col-6 col-md-3 ${card.name} card-container mb-4`);
                         cardElement.innerHTML = `
                             <div class="card">
-                                <img src="${card.images.small}" alt="${card.name}" loading="lazy">
-                            
+                                <img src="${card.images.small}" type="button" class="btn btn-primary" alt="${card.name}" data-bs-toggle="modal" data-bs-target="#${formatedCardName}Modal" loading="lazy">
+                                
                                 <div class="container">
                                     <div class="row card-info">
                                         <div class="col-7 col-sm-9 text-start p-0 card-details">
@@ -241,6 +244,38 @@
                                 </div>
                             </div>`;
                         container.appendChild(cardElement);
+
+                        const modalElement = document.createElement('div');
+                        modalElement.setAttribute('class',`modalContainer-${formatedCardName} modal fade`);
+                        modalElement.setAttribute('id',`${formatedCardName}Modal`);
+                        modalElement.setAttribute('tabIndex','-1');
+                        modalElement.setAttribute('aria-labelledby',`${formatedCardName}ModalLabel`);
+                        modalElement.setAttribute('aria-hidden','true');
+                        modalElement.innerHTML = `
+                                <div class="modal-dialog modal-xl">
+                                    <div class="modal-content">
+                                        <div class="modal-body">
+                                            <div class="container">
+                                                <div class="row">
+                                                    <div class="col-6">
+                                                        <img src="${card.images.large}" alt="${card.name}" loading="lazy">
+                                                    </div>
+                                                    <div class="col-6">
+                                                        <div class="row modal-header align-items-center">
+                                                            <div class="col-10">
+                                                                <h1 class="modal-title fs-2" id="${formatedCardName}ModalLabel">${card.name}</h1>
+                                                            </div>
+                                                            <div class="col-2 d-flex justify-content-end">
+                                                                <span type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close"></span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>`;
+                        container.appendChild(modalElement);
                     });
                 }
                 fetchAndDisplaySetCards();
