--- a/pages/sv/sv1.html
+++ b/pages/sv/sv1.html
@@ -279,7 +279,7 @@
                                                                     <div class="col-6">
                                                                         <p class="h1 modal-title fs-2" id="${formatedCardName}ModalLabel">${card.name}</p>
                                                                     </div>
-                                                                    <div class="col-6 container d-flex justify-content-end">
+                                                                    <div class="col-6 container d-flex justify-content-end ${card.hp ? '' : 'd-none'}">
                                                                         <p class="h5">${card.hp}HP</p>
                                                                     </div>
                                                                 </div>
