--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link href="lib/css/global.css" rel="stylesheet">
     </head>
     <body>
-        <header class="header">
+        <header class="header" id="mainHeader">
             <div class="container">
                 <a href="index.html">
                     <img src="lib/imgs/c1-pokeball-logo.svg" alt="C1 Logo">
@@ -30,7 +30,7 @@
             <div class="row mb-3 p-3">
                 <h1 class="set-title">Scarlet & Violet Sets</h1>
             </div>
-            <div class="container gx-1">
+            <div class="container gx-1" id="setList">
                 <div class="row g-4">
                     <div class="col-12 col-lg-4">
                         <div class="card set-card">
@@ -74,6 +74,21 @@
                     </div>
                 </div>
             </div>
+
+            <script>
+                window.addEventListener('scroll', function() {
+                    var header = document.getElementById('mainHeader');
+                    var targetDiv = document.getElementById('setList');
+
+                    var targetDivTop = targetDiv.getBoundingClientRect().top;
+
+                    if (targetDivTop <= 0) {
+                        header.classList.add('sticky');
+                    } else {
+                        header.classList.remove('sticky');
+                    }
+                });
+            </script>
         </main>
     </body>
 
