--- a/index.html
+++ b/index.html
@@ -33,41 +33,41 @@
                 <div class="row g-4">
                     <div class="col-12 col-lg-4">
                         <div class="card set-card">
-                            <img src="lib/imgs/set-logos/PAF.png"> 
+                            <img src="lib/imgs/set-logos/sv4pt5.png"> 
                         </div>
                     </div>
                     <div class="col-12 col-lg-4">
                         <a href="pages/sv/sv4.html" class="no-decoration">
                             <div class="card set-card">
-                                <img src="lib/imgs/set-logos/PAR.png">
+                                <img src="lib/imgs/set-logos/sv4.png">
                             </div>
                         </a>
                     </div>
                     <div class="col-12 col-lg-4">
                         <a href="pages/sv/sv3pt5.html" class="no-decoration">
                             <div class="card set-card">
-                                <img src="lib/imgs/set-logos/151.png">  
+                                <img src="lib/imgs/set-logos/sv3pt5.png">  
                             </div>
                         </a>
                     </div>
                     <div class="col-12 col-lg-4">
                         <a href="pages/sv/sv3.html" class="no-decoration">
                             <div class="card set-card">
-                                <img src="lib/imgs/set-logos/OBF.png">  
+                                <img src="lib/imgs/set-logos/sv3.png">  
                             </div>
                         </a>
                     </div>
                     <div class="col-12 col-lg-4">
                         <a href="pages/sv/sv2.html" class="no-decoration">
                             <div class="card set-card">
-                                <img src="lib/imgs/set-logos/PE.png"> 
+                                <img src="lib/imgs/set-logos/sv2.png"> 
                             </div>
                         </a>
                     </div>
                     <div class="col-12 col-lg-4">
                         <a href="pages/sv/sv1.html" class="no-decoration">
                             <div class="card set-card">
-                                <img src="lib/imgs/set-logos/SV.png">
+                                <img src="lib/imgs/set-logos/sv1.png">
                             </div>
                         </a>
                     </div>
