--- a/pages/sv/sv3.html
+++ b/pages/sv/sv3.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col card-list" id="cardList">
+                <div class="col card-list p-0 p-sm-2" id="cardList">
                     <div class="container gx-1">
                         <div class="row">
                             <div id="loading">
