--- a/pages/sv/sv3pt5.html
+++ b/pages/sv/sv3pt5.html
@@ -28,7 +28,7 @@
         <main class="container mt-3 p-4">
             <div class="row mb-3 set-info"> 
                 <div class="col-12 col-sm-8">
-                    <img class="img-fluid" src="../../lib/imgs/set-logos/sv3pt3.png">
+                    <img class="img-fluid" src="../../lib/imgs/set-logos/sv3pt5.png">
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
                     <div id="setInfo">
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col card-list" id="cardList">
+                <div class="col card-list p-0 p-sm-2" id="cardList">
                     <div class="container gx-1">
                         <div class="row">
                             <div id="loading">
